--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@ layout: default
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-info fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>My Philosophy</h2>
             <div class="w3-container">
                 <p>
-                    I love the internet! A "thing" that allows us to connect to millions of individuals at any given moment! It's quite the extoardinary tool and as a web developer I take great pride in delivering, not only an amazing website, but an extoardinary user experience.
+                    I love the internet! A "thing" that allows us to connect to millions of individuals at any given moment! It's quite the extraordinary tool and as a web developer I take great pride in delivering, not only an amazing website, but an extraordinary user experience.
                     A website is a tool of expression in the 21st century. I aim to deliver a website that expresses you and your company/organization in the best possible direction.</p>
                 <p>
-                    First and foremost, my goal as a web devloper is to make the web better. I aim to make sure that accessibility is not a problem for you by delivering a Responsive first site. It's important that a site scale beautifully on any device. The focus is to
-                    deliver your content in the best way, shape, or form, and that it doesn't decieve or take advantage of anyone. It's very important to me that everyone can use it, with any device, having any disability, and no matter where they are
+                    First and foremost, my goal as a web developer is to make the web better. I aim to make sure that accessibility is not a problem for you by delivering a Responsive first site. It's important that a site scale beautifully on any device. The focus is to
+                    deliver your content in the best way, shape, or form, and that it doesn't deceive or take advantage of anyone. It's very important to me that everyone can use it, with any device, having any disability, and no matter where they are
                     from or how strong their internet connection is.
                 </p>
                 <p>
                     I enjoy making websites of any type using a variety of different tools. I enjoy learning and understanding the backend, but front end is my passion.
                 </p>
                 <p>
-                    At the end of the day, it all comes down to my love of technology and what is possible everyday. If you have a web problem, let me know, I'd like to help you solve it.
+                    At the end of the day, it all comes down to my love of technology and what is possible every day. If you have a web problem, let me know, I'd like to help you solve it.
                 </p>
             </div>
         </div>
