--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: default
                     </a>
                     <div class="w3-container w3-teal">
                         <p>Computer & Mobile Device Repair Website.</p>
-                        <p>Website utilizes a plugin to handle online appointments for customers. Built using HTML/CSS/JS along with the Bootstrap framework. Respnsive on all types of devices. Utilizes CloudFlare for added response and speed.</p>
+                        <p>Website utilizes a plugin to handle online appointments for customers. Built using HTML/CSS/JS along with the Bootstrap framework. Responsive on all types of devices. Utilizes CloudFlare for added response and speed.</p>
                     </div>
                 </div>
                 <div class="w3-panel w3-col m6">
