--- a/index.html
+++ b/index.html
@@ -39,7 +39,19 @@ layout: default
         <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-folder fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Portolio</h2>
             <div class="w3-row-padding">
-                <div class="w3-panel w3-col m6">
+              <div class="w3-panel w3-col m4">
+                  <div class="w3-container w3-dark-grey w3-center">
+                      <h5 class="w3-text-white"><b><a href="https://alphacuts.club" target="_blank">Alpha Cuts Club</a></b></h5>
+                  </div>
+                  <a href="https://alphacuts.club" target="_blank">
+                      <img src="{{ " /assets/img/alphacuts.jpg " | prepend: site.baseurl }}" alt="Alpha Cuts Club" style="width:100%">
+                  </a>
+                  <div class="w3-container w3-teal">
+                      <p>Professional E-commerce site for local client</p>
+                      <p>Built from the ground up utilizing JavaScript, HTML, CSS and a variety of other tools to deliver a fast, responive, and highly accessible site</p>
+                  </div>
+              </div>
+                <div class="w3-panel w3-col m4">
                     <div class="w3-container w3-dark-grey w3-center">
                         <h5 class="w3-text-white"><b><a href="https://landrtech.com" target="_blank">Landr Tech</a></b></h5>
                     </div>
@@ -51,7 +63,7 @@ layout: default
                         <p>Website utilizes a plugin to handle online appointments for customers. Built using HTML/CSS/JS along with the Bootstrap framework. Responsive on all types of devices. Utilizes CloudFlare for added response and speed.</p>
                     </div>
                 </div>
-                <div class="w3-panel w3-col m6">
+                <div class="w3-panel w3-col m4">
                     <img src="{{ " /assets/img/placeholder.jpg " | prepend: site.baseurl }}" alt="Place Holder" style="width:100%">
                     <div class="w3-container w3-teal">
                         <p>I am always looking for opportunities to build or create something great. If you are looking for not only a web develeoper, but an individual that will go far and beyond to deliver a supieror service get in contact with me.
