--- a/index.html
+++ b/index.html
@@ -143,18 +143,33 @@ layout: default
         <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
             <div class="w3-container">
-                <h5 class="w3-opacity"><b>Front Desk Superviser</b><br><i>Clarion Highlander Hotel</i> - Iowa City, IA</h5>
+                <h5 class="w3-opacity"><b>Mobile Device Technician</b><br><i>Certified Phone Repair</i> - DeKalb, IL</h5>
+                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2016 - Present</h6>
+                <ul>
+                    <li>
+                        <p>Resolve customer issues relating to equipment problems by fixing phones, tablets and other consumer electronics by determining the most effective repair method.</p>
+                    </li>
+                    <li>
+                        <p>Meet or exceed key performance objectives including service and repair metrics.</p>
+                    </li>
+                    <li>
+                        <p>Engage with and reassure customers to deliver outstanding customer service.</p>
+                    </li>
+                </ul>
+                <hr>
+            </div>
+            <div class="w3-container">
+                <h5 class="w3-opacity"><b>Front Desk Supervisor</b><br><i>Clarion Highlander Hotel</i> - Iowa City, IA</h5>
                 <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - May 2016</h6>
                 <ul>
                     <li>
-                        <p>Supervise and monitor activities of all Front Desk staff making sure they adhere to the Hotel’s standards of excellence and to the Hotel’s policies and procedures outlined in the employee handbook, coaching, training and correcting
-                            where needed.</p>
+                        <p>Supervised and monitored activities of all Front Desk staff making sure they adhere to the hotel’s standards of excellence and to the hotel’s policies and procedures outlined in the employee handbook, coaching, training and correcting where needed.</p>
                     </li>
                     <li>
-                        <p> Act as manager on duty for the hotel in the absence of the Assistant Manager or General Manager dealing with complaints, problem solving, disturbances, special requests and any other issues that may arise.</p>
+                        <p>Acted as manager on duty for the hotel in the absence of the Assistant Manager or General Manager dealing with complaints, problem solving, disturbances, special requests and any other issues that may arise in a timely manner.</p>
                     </li>
                     <li>
-                        <p>Provide Front Desk Staff with necessary training and support as directed by management.</p>
+                        <p>Administered front desk staff training materials and provided support to staff where needed.</p>
                     </li>
                 </ul>
                 <hr>
@@ -164,34 +179,16 @@ layout: default
                 <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2015 - Sep 2015</h6>
                 <ul>
                     <li>
-                        <p>I listened and comprehended issues as stated by customers where I performed routine inspection, testing, diagnosis, and repair on a wide range of devices.</p>
+                        <p>Performed routine inspection, testing, diagnosis, and repaired on a wide range of consumer electronics while providing best in class customer service.</p>
                     </li>
                     <li>
-                        <p>I carefully communicated back to customers of diagnosis and repairs. It was imperative to properly communicate in a clear and concise manner so anybody could properly understand what was done.</p>
+                        <p>Communicated back to customers of diagnosis and repairs. It was imperative to properly communicate in a clear and concise manner so anybody could properly understand what was done.</p>
                     </li>
                     <li>
-                        <p>I accurately documented repairs and parts information on repair tracking software and in point of sale computer tracking system. This included the tracking of parts used or needed to be ordered. It was important to operate in a
-                            timely manner.</p>
+                        <p>Maintained accurate repairs notes and parts information on repair tracking software and in point of sale computer tracking system. This included the tracking of parts used or needed to be ordered.</p>
                     </li>
                 </ul>
                 <hr>
-            </div>
-            <div class="w3-container">
-                <h5 class="w3-opacity"><b>Guest Service Representative</b><br><i>Clarion Highlander Hotel</i> - Iowa City, IA</h5>
-                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2011 - Jan 2015</h6>
-                <ul>
-                    <li>
-                        <p>As the first contact, I provide exceptional customer service to all hotel guests, making their stay as comfortable and accommodating as possible. Everything from sell and upselling accommodations to resolving any guest requests
-                            was my duty.</p>
-                    </li>
-                    <li>
-                        <p>In assisting guests, it was out duty to extend our customer service knowledge to guests that called directly to our property. From guiding guests in making reservations to relaying guest to the right department when transferring
-                            or taking messages from directly.</p>
-                    </li>
-                    <li>
-                        <p>Maintained a well-kept and organized area. It was important to relay any information to the next shift or to management, so there was a smooth transition from one shift to another.</p>
-                    </li>
-                </ul>
             </div>
         </div>
 
