--- a/index.html
+++ b/index.html
@@ -143,8 +143,24 @@ layout: default
         <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
             <div class="w3-container">
+                <h5 class="w3-opacity"><b>Reservation Specialist</b><br><i>IHG</i> - North Charleston, SC</h5>
+                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2017 - Present</h6>
+                <ul>
+                    <li>
+                        <p>Answer in-bound calls from customers around the world looking to reserve rooms at our IHG properties.</p>
+                    </li>
+                    <li>
+                        <p>Provide elite customer service to our guests while trying to match them to the hotel that best meets their needs.</p>
+                    </li>
+                    <li>
+                        <p>Deliver a great customer experience for hotels across the world.</p>
+                    </li>
+                </ul>
+                <hr>
+            </div>
+            <div class="w3-container">
                 <h5 class="w3-opacity"><b>Mobile Device Technician</b><br><i>Certified Phone Repair</i> - DeKalb, IL</h5>
-                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2016 - Present</h6>
+                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2016 - Jul 2017</h6>
                 <ul>
                     <li>
                         <p>Resolve customer issues relating to equipment problems by fixing phones, tablets and other consumer electronics by determining the most effective repair method.</p>
