--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
---- layout: default ---
+---
+layout: default
+---
 <div class="w3-content w3-margin-top w3-margin-bottom">
   <div class="w3-row-padding">
     <div class="w3-container w3-card-4 w3-teal w3-margin-bottom w3-center w3-padding-16">
