--- a/index.html
+++ b/index.html
@@ -107,8 +107,30 @@ layout: default
     <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
       <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
       <div class="w3-container">
+        <h5 class="w3-opacity"><b>Technical TexExpert</b><br><i>T-Mobile</i> - North Charleston, SC</h5>
+        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2018 - Present</h6>
+        <ul>
+          <li>
+            <p>• Manage and respond to product support tickets.<br>
+• Analysis of call logs in order to discover any underlying issues or trends.<br>
+• Troubleshooting technical issues.<br>
+• Resolving network issues.<br>
+• Installing and configuring devices and software guidance.<br>
+• Speaking to customers to quickly get to the root of their problem.<br>
+• Providing timely and accurate customer feedback.<br>
+• Talking customers through a series of actions to resolve a problem.<br>
+• Following up with clients to ensure the problem is resolved.<br>
+• Replacing or repairing the necessary parts.<br>
+• Providing support in the form of procedural documentation.<br>
+• Managing multiple cases at one time.<br>
+• Testing and evaluating new technologies.</p>
+          </li>
+        </ul>
+        <hr>
+      </div>
+      <div class="w3-container">
         <h5 class="w3-opacity"><b>Reservation Specialist</b><br><i>IHG</i> - North Charleston, SC</h5>
-        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2017 - Present</h6>
+        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2017 - Oct 2018</h6>
         <ul>
           <li>
             <p>Effectively evaluate customer needs and identify hotels & rooms that best fit the guest's requests; providing a personalized sales experience for each customer and correctly creating accurate reservations.</p>
