--- a/index.html
+++ b/index.html
@@ -214,6 +214,11 @@ layout: default
 
     <div class="w3-container w3-card-2 w3-white">
       <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-university fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+            <div class="w3-container">
+        <h5 class="w3-opacity"><b>Trident Technical College</b></h5>
+        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2021</h6>
+        <p>Associates of Science - Computer Programming</p>
+      </div>
       <div class="w3-container">
         <h5 class="w3-opacity"><b>Kishwaukee College</b></h5>
         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2011</h6>
