--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@ layout: default
       <div class="w3-container">
         <h5 class="w3-opacity"><b>Technical TexExpert</b><br><i>T-Mobile</i> - North Charleston, SC</h5>
         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2018 - Present</h6>
-            <p>• Manage and respond to product support tickets.<br>
+         <ul>
+          <li>
+            <p>Manage and respond to product support tickets.<br>
 • Analysis of call logs in order to discover any underlying issues or trends.<br>
 • Troubleshooting technical issues.<br>
 • Resolving network issues.<br>
@@ -122,6 +124,8 @@ layout: default
 • Providing support in the form of procedural documentation.<br>
 • Managing multiple cases at one time.<br>
 • Testing and evaluating new technologies.</p>
+         </li>
+        </ul>
         <hr>
       </div>
       <div class="w3-container">
