--- a/index.html
+++ b/index.html
@@ -112,18 +112,18 @@ layout: default
          <ul>
           <li>
             <p>Manage and respond to product support tickets.<br>
-• Analysis of call logs in order to discover any underlying issues or trends.<br>
-• Troubleshooting technical issues.<br>
-• Resolving network issues.<br>
-• Installing and configuring devices and software guidance.<br>
-• Speaking to customers to quickly get to the root of their problem.<br>
-• Providing timely and accurate customer feedback.<br>
-• Talking customers through a series of actions to resolve a problem.<br>
-• Following up with clients to ensure the problem is resolved.<br>
-• Replacing or repairing the necessary parts.<br>
-• Providing support in the form of procedural documentation.<br>
-• Managing multiple cases at one time.<br>
-• Testing and evaluating new technologies.</p>
+              Analysis of call logs in order to discover any underlying issues or trends.<br>
+              Troubleshooting technical issues.<br>
+              Resolving network issues.<br>
+              Installing and configuring devices and software guidance.<br>
+              Speaking to customers to quickly get to the root of their problem.<br>
+              Providing timely and accurate customer feedback.<br>
+              Talking customers through a series of actions to resolve a problem.<br>
+              Following up with clients to ensure the problem is resolved.<br>
+              Replacing or repairing the necessary parts.<br>
+              Providing support in the form of procedural documentation.<br>
+              Managing multiple cases at one time.<br>
+              Testing and evaluating new technologies.</p>
          </li>
         </ul>
         <hr>
