--- a/index.html
+++ b/index.html
@@ -111,19 +111,45 @@ layout: default
         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2018 - Present</h6>
          <ul>
           <li>
-            <p>Manage and respond to product support tickets.<br>
+            <p>
+              Manage and respond to product support tickets.<br>
+            </p>
+            <p>
               Analysis of call logs in order to discover any underlying issues or trends.<br>
+            </p>
+            <p>
               Troubleshooting technical issues.<br>
+            </p>
+            <p>
               Resolving network issues.<br>
+            </p>
+            <p>
               Installing and configuring devices and software guidance.<br>
+            </p>
+            <p>
               Speaking to customers to quickly get to the root of their problem.<br>
+            </p>
+            <p>
               Providing timely and accurate customer feedback.<br>
+            </p>
+            <p>
               Talking customers through a series of actions to resolve a problem.<br>
+            </p>
+            <p>
               Following up with clients to ensure the problem is resolved.<br>
+            </p>
+            <p>
               Replacing or repairing the necessary parts.<br>
+            </p>
+            <p>
               Providing support in the form of procedural documentation.<br>
+            </p>
+            <p>
               Managing multiple cases at one time.<br>
+            </p>
+            <p>
               Testing and evaluating new technologies.</p>
+           </p>
          </li>
         </ul>
         <hr>
